# ChangeLog for dev-embedded/bitbake
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/bitbake/ChangeLog,v 1.16 2007/08/25 15:07:24 vapier Exp $

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org> bitbake-1.8.8.ebuild,
  bitbake-9999.ebuild:
  Pull in dev-python/pysqlite as we need it.

*bitbake-1.8.8 (19 Aug 2007)

  19 Aug 2007; Mike Frysinger <vapier@gentoo.org> +bitbake-1.8.8.ebuild:
  Version bump #189421 by Luis Vitorio Crgnini.

*bitbake-1.8.6 (09 Jul 2007)

  09 Jul 2007; Mike Frysinger <vapier@gentoo.org> +bitbake-1.8.6.ebuild:
  Version bump #184707 by Claes Mogren.

  24 Jun 2007; Piotr Jaroszyński <peper@gentoo.org> bitbake-9999.ebuild:
  (QA) Don't use KEYWORDS="-*". bug #160519.

*bitbake-1.8.4 (11 Jun 2007)

  11 Jun 2007; Mike Frysinger <vapier@gentoo.org> +bitbake-1.8.4.ebuild:
  Version bump #181034 by Luis Vitorio Cargnini.

*bitbake-1.6.6 (17 Feb 2007)

  17 Feb 2007; Mike Frysinger <vapier@gentoo.org> +bitbake-1.6.6.ebuild:
  Version bump #167168 by Claes Mogren.

*bitbake-1.6.2 (22 Dec 2006)

  22 Dec 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.6.2.ebuild:
  Version bump #158650 by Radek Podgorny.

*bitbake-1.6.0 (06 Sep 2006)

  06 Sep 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.6.0.ebuild:
  Version bump #146399 by pavlix.

*bitbake-1.4.2 (07 Jun 2006)

  07 Jun 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.4.2.ebuild:
  Version bump #135122 by Jan Boysen.

*bitbake-1.4.0 (23 Apr 2006)

  23 Apr 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.4.0.ebuild:
  Version bump #130905 by Bryan Jacobs.

*bitbake-1.3.3 (29 Mar 2006)

  29 Mar 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.3.3.ebuild:
  Version bump #127384 by Richard Kung.

*bitbake-1.3.2 (02 Feb 2006)

  02 Feb 2006; Mike Frysinger <vapier@gentoo.org> +bitbake-1.3.2.ebuild:
  Version bump #121037 by Radek Podgorny.

*bitbake-9999 (02 Feb 2006)
