@@ -2,9 +2,9 @@ AUX 0-gentoo-paths.patch 590 RMD160 d791975a90e18a6d1dc5c6930f973a41150a9fc3 SHA
 DIST bitbake-1.8.4.tar.gz 108485 RMD160 4aae983210f3a1e3bbc82c5f10e2f205f14b64a8 SHA1 fb4a8f1bef49dc0085904f2ea3981b0b1a47f973 SHA256 c7e425a1039c369c36c8416acc02cb15bccc5250746a1961137e3cca692f7ed9
 DIST bitbake-1.8.6.tar.gz 107460 RMD160 91b092aec793134e9feaf9a67bfff548ea7c9c44 SHA1 fc0bf231af7ef7dad0c767bdcbcce6cbdfa3258e SHA256 fd8a9e9e916314f9385f497d1f9b81d0885487f7741ad7be790972f44fc68b25
 DIST bitbake-1.8.8.tar.gz 107965 RMD160 b43503f932c9e7268e550dbbcee0b93c1399d368 SHA1 5feb7dea29b78861c9d289303b080b6cdacfbf68 SHA256 78f6c7507d33e7dcd7e001e7c7c113898114f001d3489e30a2ad556c56139171
-EBUILD bitbake-1.8.4.ebuild 559 RMD160 7ca0476e267e5d09ae55e2febedb75e5e09a5cb4 SHA1 509885847ee5d20b6301545bbdf0a0dd90a6e865 SHA256 aa04552ab3d299ca63c9bd410b8ce7de9c7134f03ab56e506b8f21e7ec679588
-EBUILD bitbake-1.8.6.ebuild 559 RMD160 357147e4dad486c0c879abd8928da5dd8fc664fa SHA1 c2fbdee4e586c34be431bd5cd0734d00dcf956ea SHA256 b7a91f0012d47036e2abbbfec192bc3531bb031054ce4f520ab9253e3a424fa2
-EBUILD bitbake-1.8.8.ebuild 580 RMD160 08c96bfa96795b67693712c78397b381c42f549b SHA1 5db19a87fb2b2e68a6cd9332b73cc351b47a85e4 SHA256 fe92c75433df56b13a3faa5050de03e373dd7d7971953328eefca31dd642b95c
-EBUILD bitbake-9999.ebuild 605 RMD160 a3014524475856768485abd9e15d4fc676fff8bf SHA1 de2749f6ec975a5bae57f8acb429581d5f93f0be SHA256 4a8e4e9f9820eabbdd8d0d731a47afee8dbd7794db78ad3de927d4ed548a627d
-MISC ChangeLog 2332 RMD160 26fdf0345f60c06bc71fd7f086e9fd9b1f73da95 SHA1 55ead093bdaf866034057bff35d949603470d745 SHA256 6234dedd0af57196124490f63cb92ca468f5bd6cfdb1f2efae5a553fa908e99d
+EBUILD bitbake-1.8.4.ebuild 550 RMD160 679dc79267236464beb975fca96fc49f8c3a8816 SHA1 4b69d3e79a771aad8b70f0146c6a78191ef1b761 SHA256 2416f41c4e637777629da37945899678d80487b4701e52b02ab767f43085186e
+EBUILD bitbake-1.8.6.ebuild 550 RMD160 b3cf0e87773ab50c822b490e852b269a36eaf181 SHA1 327e1311a1f6b69b76d0b0793612a8dc14302a4d SHA256 62d5ed3ad49bb1d36522af00edc737c76673f6aab85fe72a147fb909b524e8cd
+EBUILD bitbake-1.8.8.ebuild 571 RMD160 701c82398eaeb8bc46d2173af2b6e30cc60eec35 SHA1 3bd16f205ff0ac6764257930c6bdd5d633104e3b SHA256 a37852bb5693b3cc381527b874db0a8d9fb2f6537a7401cf39e0833219c248b5
+EBUILD bitbake-9999.ebuild 606 RMD160 64374ecc00b8a80ba4f09146576a8bfd52dbcb89 SHA1 b3ad8c49ddb272edeec5da28df13b53f9de66994 SHA256 7ec5771a2d3256585e99a251861724e63e8cbcaecb1dd8da9e4ac0787cc6d304
+MISC ChangeLog 2487 RMD160 b9cd0b296622818a1f58ee6b3593eb2677a2f16a SHA1 d284e9de3ea43e2c25e81f3348180991e6f8e0fd SHA256 027cef4f11b0e3f708feafa3f9d6d0415e32fc08bd504520fabf686781c486eb
 MISC metadata.xml 161 RMD160 77385273ea1d12ed4093a4167307486b74d1cf82 SHA1 aa4b2873e32de89c0b0aeb26b5782f77cb00948e SHA256 a11fdd02015a232398fdf22a20d26a95fc34d44c54513e6b26b6128d0b76122e
