@@ -1,10 +1,10 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/bitbake/bitbake-1.8.6.ebuild,v 1.1 2007/07/09 23:32:13 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/bitbake/bitbake-1.8.6.ebuild,v 1.2 2008/05/02 18:15:12 calchan Exp $
 
 DESCRIPTION="package management tool for OpenEmbedded"
 HOMEPAGE="http://developer.berlios.de/projects/bitbake/"
-SRC_URI="http://download.berlios.de/${PN}/${P}.tar.gz"
+SRC_URI="mirror://berlios/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
