@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/bitbake/bitbake-9999.ebuild,v 1.3 2007/08/25 15:07:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/bitbake/bitbake-9999.ebuild,v 1.4 2008/05/02 18:15:12 calchan Exp $
 
 ESVN_REPO_URI="svn://svn.berlios.de/bitbake/trunk/bitbake"
 inherit subversion eutils
